--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="js/script.js"></script>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Dylan's Fizzbuzz App</title>
 </head>
 <body>
 
